--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: ruby
+rvm:
+  -2.3.1p112
 before_install:
-- gem update --system
-- gem install bundler
+  - gem update --system
+  - gem install bundler
 script:
-- build
+  - build
 deploy:
   provider: pages
   skip_cleanup: true
