--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: ruby
 before_install:
   - gem update --system
+install:
+  - bundle install
 deploy:
   - provider: script
-    script: bash build
+    script: bash build.sh
     on:
       branch: master
 #deploy:
