--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,15 @@ before_install:
   - gem install bundler jekyll
 install:
   - bundle install
-deploy:
-  - provider: script
-    script: bash build.sh
-    on:
-      branch: master
+# deploy:
+#   - provider: script
+#     script: bash build.sh
+#     on:
+#       branch: master
+jobs:
+  include:
+    - stage: build
+      script: ./build.sh
 #deploy:
 #  provider: pages
 #  skip_cleanup: true
