--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 #   link: /
 - name: Blog
   link: /blog.html
-- name: Projects
-  link: /projects.html
+# - name: Projects
+#   link: /projects.html
 # - name: Categories
 #   link: /categories.html
 - name: About
