--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: ruby
 before_install:
   - gem update --system
-  - gem install bundler
+  - gem install bundler jekyll
 install:
   - bundle install
 # jobs:
