--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: ruby
 before_install:
   - gem update --system
-  - gem install bundler jekyll
+  # - gem install bundler jekyll
 install:
   - bundle install
-# jobs:
-#   include:
-#     - stage: build
-#       script: ./build.sh
+jobs:
+  include:
+    - stage: build
+      script: ./build.sh
 deploy:
  provider: pages
  skip_cleanup: true
